// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MyOverview /> renders correctly with error 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="dpd-content"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": "40rem",
      }
    }
  >
    You have no 
    Quotes
    .
  </div>,
]
`;

exports[`<MyOverview /> renders correctly with loading 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <div
        className="loading -large"
      >
        <svg
          className="loading--svg"
          viewBox="-75 -75 150 150"
        >
          <circle
            className="loading--stroke"
            cx="0"
            cy="0"
            r="37.5"
          />
        </svg>
      </div>
    </div>
  </div>,
]
`;

exports[`<MyOverview /> renders orders correctly with data 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Orders
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <div
        className="choiceboxes -cols-3 -teal"
      >
        <button
          className="choicebox -active"
          onClick={[Function]}
          type="button"
        >
          All Orders
        </button>
      </div>
      <div
        className="row:cards-1col"
      >
        <div
          className="card -inline"
          data-testid="card"
          style={
            Object {
              "--img-w": "300px",
            }
          }
        >
          <img
            className="card-image"
            data-testid="card-image"
            onError={[Function]}
          />
          <div
            className="title"
          >
            <span
              className="heading -black -lead"
              data-testid="card-heading"
            >
               
            </span>
          </div>
          <div
            className="spec-list"
          >
            <span>
              Available
               
              Now
            </span>
            <span>
              Initial Rental
               
              £100 (inc. VAT)
            </span>
            <span>
              Contract Length
               
              100 month
            </span>
            <span>
              Annual Mileage
               
              100
            </span>
            <span>
              Maintanence
               
              No
            </span>
            <span>
              Fuel
               
              -
            </span>
            <span>
              Transmission
               
              -
            </span>
            <span>
              Color
               
              colour
            </span>
            <span>
              Trim
               
              trim
            </span>
            <hr />
            <div>
              <span>
                Order No: 
              </span>
              <span>
                id
              </span>
            </div>
            <div>
              <span>
                Date: 
              </span>
              <span>
                16.06.2020
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <span
                className="price--sub"
              >
                £
              </span>
              <span
                className="price--pounds"
              >
                100
              </span>
              <span
                className="price--sub"
              >
                .
                00
              </span>
              <div
                className="price--label"
              >
                Per Month Inc.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                Order Now
              </div>
            </button>
          </div>
        </div>
        <div
          className="card -inline"
          data-testid="card"
          style={
            Object {
              "--img-w": "300px",
            }
          }
        >
          <img
            className="card-image"
            data-testid="card-image"
            onError={[Function]}
          />
          <div
            className="title"
          >
            <span
              className="heading -black -lead"
              data-testid="card-heading"
            >
               
            </span>
          </div>
          <div
            className="spec-list"
          >
            <span>
              Available
               
              Now
            </span>
            <span>
              Initial Rental
               
              £100 (ex. VAT)
            </span>
            <span>
              Contract Length
               
              100 month
            </span>
            <span>
              Annual Mileage
               
              100
            </span>
            <span>
              Maintanence
               
              No
            </span>
            <span>
              Fuel
               
              -
            </span>
            <span>
              Transmission
               
              -
            </span>
            <span>
              Color
               
              colour
            </span>
            <span>
              Trim
               
              trim
            </span>
            <hr />
            <div>
              <span>
                Order No: 
              </span>
              <span>
                id1
              </span>
            </div>
            <div>
              <span>
                Date: 
              </span>
              <span>
                16.06.2020
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <span
                className="price--sub"
              >
                £
              </span>
              <span
                className="price--pounds"
              >
                100
              </span>
              <span
                className="price--sub"
              >
                .
                00
              </span>
              <div
                className="price--label"
              >
                Per Month Ex.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                Order Now
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<MyOverview /> renders quotes correctly with data 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <div
        className="row:cards-1col"
      >
        <div
          className="card -inline"
          data-testid="card"
          style={
            Object {
              "--img-w": "300px",
            }
          }
        >
          <img
            className="card-image"
            data-testid="card-image"
            onError={[Function]}
          />
          <div
            className="title"
          >
            <span
              className="heading -black -lead"
              data-testid="card-heading"
            >
               
            </span>
          </div>
          <div
            className="spec-list"
          >
            <span>
              Available
               
              Now
            </span>
            <span>
              Initial Rental
               
              £100 (inc. VAT)
            </span>
            <span>
              Contract Length
               
              100 month
            </span>
            <span>
              Annual Mileage
               
              100
            </span>
            <span>
              Maintanence
               
              No
            </span>
            <span>
              Fuel
               
              -
            </span>
            <span>
              Transmission
               
              -
            </span>
            <span>
              Color
               
              colour
            </span>
            <span>
              Trim
               
              trim
            </span>
            <hr />
            <div>
              <span>
                Order No: 
              </span>
              <span>
                id
              </span>
            </div>
            <div>
              <span>
                Date: 
              </span>
              <span>
                16.06.2020
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <span
                className="price--sub"
              >
                £
              </span>
              <span
                className="price--pounds"
              >
                100
              </span>
              <span
                className="price--sub"
              >
                .
                00
              </span>
              <div
                className="price--label"
              >
                Per Month Inc.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                Continue To Order
              </div>
            </button>
          </div>
        </div>
        <div
          className="card -inline"
          data-testid="card"
          style={
            Object {
              "--img-w": "300px",
            }
          }
        >
          <img
            className="card-image"
            data-testid="card-image"
            onError={[Function]}
          />
          <div
            className="title"
          >
            <span
              className="heading -black -lead"
              data-testid="card-heading"
            >
               
            </span>
          </div>
          <div
            className="spec-list"
          >
            <span>
              Available
               
              Now
            </span>
            <span>
              Initial Rental
               
              £100 (ex. VAT)
            </span>
            <span>
              Contract Length
               
              100 month
            </span>
            <span>
              Annual Mileage
               
              100
            </span>
            <span>
              Maintanence
               
              No
            </span>
            <span>
              Fuel
               
              -
            </span>
            <span>
              Transmission
               
              -
            </span>
            <span>
              Color
               
              colour
            </span>
            <span>
              Trim
               
              trim
            </span>
            <hr />
            <div>
              <span>
                Order No: 
              </span>
              <span>
                id1
              </span>
            </div>
            <div>
              <span>
                Date: 
              </span>
              <span>
                16.06.2020
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <span
                className="price--sub"
              >
                £
              </span>
              <span
                className="price--pounds"
              >
                100
              </span>
              <span
                className="price--sub"
              >
                .
                00
              </span>
              <div
                className="price--label"
              >
                Per Month Ex.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                Continue To Order
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
